--- a/public/index.html
+++ b/public/index.html
@@ -719,7 +719,7 @@ async function loadBorrowers() {
     }
 
     // Log exact payload for debugging
-    const payload = { borrowerId: parseInt(borrowerId), amount: numAmt };
+    const payload = { borrower_id: parseInt(borrowerId), amount: numAmt };
     console.log('Sending payload:', payload);
 
     const res = await fetchJSON(`${API_BASE}?route=borrower-payments`, {
@@ -750,6 +750,7 @@ loadDashboard();
 </script>
 </body>
 </html>
+
 
 
 
